--- a/j_1_hello_java.ipynb
+++ b/j_1_hello_java.ipynb
@@ -10,6 +10,8 @@
    "source": [
     "# 1. Hello Java\n",
     "\n",
+    "Last updated 20180310SAT 0948\n",
+    "\n",
     "## 1.1 학습내용\n",
     "\n",
     "### 1.1.1 강의 목표\n",
@@ -163,14 +165,14 @@
     "## 1.3 프로그래밍이란\n",
     "\n",
     "* 프로그래밍은 어떤 문제를 컴퓨터로 하여금 풀 수 있도록, 컴퓨터가 실행할 수 있는 명령문으로 작성하는 것이다.\n",
-    "* 객체지향 프로그래밍 (OOP, Object-Oriented Programming)에서는 컴퓨터가 실행하는 단위가 '클래스'이다. 함수프로그램에서는 함수가 실행단위이다.\n",
-    "* 클래스는 '재사용'하기 유리한 구조를 가지고 있다. 프로그래밍을 더 빠르게, 더 좋게 할 수 있다 (faster and better).\n",
+    "* 객체지향 프로그래밍 (OOP, Object-Oriented Programming)에서는 컴퓨터가 실행하는 단위가 **클래스**이다. 함수프로그램에서는 **함수**가 실행단위이다.\n",
+    "* 클래스는 **재사용, reuse**이 유리한 구조를 가지고 있다. 프로그래밍을 더 빠르게, 더 좋게 할 수 있다 (faster and better).\n",
     "* 객체지향 프로그래밍의 절차:\n",
     "    * 설계 - 요구사항을 해결할 수 있도록 클래스와 그 관계를 만든다.\n",
-    "    * 개발 (hfj p.2~3)\n",
+    "    * 개발\n",
     "        * 코딩 - 설계된 클래스를 원시코드로 만듦\n",
     "        * 컴파일 - 원시코드를 bytecode로 만듦\n",
-    "        * 실행 - jvm에 byte code를 읽어서 실행 (jvm이 다양한 기기에서 실행되므로, WORA라고 말함)\n",
+    "        * 실행 - JVM에 byte code를 읽어서 실행 (JVM이 다양한 기기에서 실행되므로, WORA라고 말함)\n",
     "        * 디버깅 - 오류를 제거.\n",
     "    * 테스트 - 요구사항이 충족되었는지 테스트"
    ]
@@ -262,15 +264,15 @@
     "자바는 개발환경이 잘 갖추어진 언어이다.\n",
     "객체지향언어로서 개발과정 전체에서 UML을 활용할 수 있다.\n",
     "여기서는 **개발단계에 초점을 맞추어 환경을 설치**하여 진행하기로 한다.\n",
-    "특히 IDE는 통합개발환경 Integrated Development Environment으로 코딩, 컴파일, 실행, 디버깅 등을 수행할 때 필요한 도구를 제공한다. 많이 쓰이는 IDE로는 Eclipse, IntelliJ가 있다. 이 도구들은 개발을 편리하고 빠르게 할 수 있지만, 없어지면 불능 상태의 개발자로 만들어 버리기도 한다. JDK에는 컴파일러 및 디버거가 갖추어져 있다. 명령어 방식으로 컴파일, 실행, 디버깅할 수 있는 지식을 갖춘 후, IDE를 그 다음에 사용하기로 하자. 간단하고 가벼운 편집기로는 UltraEdit, Notepad++, Sublime, Atom 등이 있다. 일부 전문적 프로그래머는 더 가볍고 플러긴을 추가해서 사용할 수 있는 Vim, Emacs를 선호하는 경우도 많다.\n",
+    "특히 IDE는 통합개발환경 Integrated Development Environment으로 코딩, 컴파일, 실행, 디버깅 등을 수행할 때 필요한 도구를 제공한다. 많이 쓰이는 IDE로는 Eclipse, IntelliJ가 있다. 이 도구들은 개발을 편리하고 빠르게 할 수 있지만, 없어지면 불능 상태의 개발자로 만들어 버리기도 한다. JDK에는 컴파일러 및 디버거가 갖추어져 있다. 명령어 방식으로 컴파일, 실행, 디버깅할 수 있는 지식을 갖춘 후, IDE를 그 다음에 사용하기로 하자. 간단하고 가벼운 편집기로는 UltraEdit, Notepad++, Sublime, **Atom** 등이 있다. 일부 전문적 프로그래머는 더 가볍고 플러긴을 추가해서 사용할 수 있는 Vim, Emacs를 선호하는 경우도 많다.\n",
     "\n",
     "단계 | 자주 사용하는 도구 | 이번 강의에서는\n",
     "-----|-----|-----\n",
     "요구사항 | UML의 사용사례를 사용해 요구사항을 적는다 | 사용하지 않음\n",
     "설계 | UML의 클래스다이어그램, 순차다이어그램 등을 작성하여 클래스와 그 관계를 표현 | 사용\n",
-    "개발 | IDE | Eclipse, IntelliJ 등을 선호. 배우는 초반에는 가벼운 편집기에 명령어 컴파일 및 실행\n",
+    "개발 | IDE | Eclipse, IntelliJ 등을 선호. 배우는 초반에는 가벼운 편집기, Vim, Emacs 또는 Atom 등을 이용하고 명령어로 컴파일 및 실행.\n",
     "Test | JUnit | 사용하지 않음\n",
-    "형상관리 | git | 사용하지 않음\n",
+    "Version Control | Git, SVN, Mercurial | 사용하지 않음\n",
     "배포 | Maven, Ant, Gradle | 사용하지 않음"
    ]
   },
@@ -316,7 +318,118 @@
     }
    },
    "source": [
-    "## 1.7 간단한 자바 프로그램 만들고, 컴파일\n"
+    "## 1.7 간단한 자바 프로그램 만들고, 컴파일해보자.\n",
+    "\n",
+    "'헬로우 월드'를 출력하는 프로그램을 만들어 보자.\n",
+    "프로그램은 간단하지만, 개발환경을 설정하고 명령어방식으로 컴파일, 실행하려면 준비가 필요하다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 디렉토리 구성\n",
+    "\n",
+    "* 최상위 디렉토리 'Code'를 먼저 만든다.\n",
+    "* 'Code' 아래 'myProject' **프로젝트 디렉토리**를 만든다.\n",
+    "* 'myProject' 아래 'lib', 'classes', 'src' 디렉토리를 만든다.\n",
+    "    * 'lib'은 **라이브러리** jar들을 저장\n",
+    "    * 'classes'는 **컴파일한 파일**들을 저장\n",
+    "    * 'src'는 **소스코드 파일**들을 저장\n",
+    "\n",
+    "```\n",
+    "C:\\Code\\myProject\\ 리눅스는 '/home/user/Code/myProject\n",
+    "         |\n",
+    "         ---> lib\\\n",
+    "         |\n",
+    "         ---> classes\\\n",
+    "                |\n",
+    "                ---> Hello.class 컴파일하고 나면 만들어지는 class\n",
+    "         |\n",
+    "         ---> src\\\n",
+    "                |\n",
+    "                ---> Hello.java\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 코드\n",
+    "\n",
+    "간단한 \"hello world!\"를 출력하는 프로그램이다.\n",
+    "코드 하나 하나 이해가 가지 않겠지만 차차 배우기로 한다.\n",
+    "\n",
+    "줄 번호 | 설명\n",
+    "-----|-----\n",
+    "1 | 클래스 이름을 Hello\n",
+    "2 | String name 속성에 \"world!\" 저장. main() 함수가 static이라서 static 수식어 붙임.\n",
+    "3 | 생성자 재정의. name을 변경할 수 있도록 함.\n",
+    "6 | sayHello()함수를 구현. static main()함수에서 호출하므로 static 수식어 붙임.\n",
+    "9 | main()함수를 구현. 수식어는 좀 복잡하지만 잘 기억하도록 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 명령어방식, command line의 컴파일 및 실행\n",
+    "\n",
+    "컴파일은 javac, 실행은 java를 사용한다.\n",
+    "\n",
+    "선택 명령어 | 설명\n",
+    "-----|-----\n",
+    "-d `<디렉토리>` | 생성된 class 파일을 저장하는 디렉토리\n",
+    "-sourcepath `<path>` | 소스코드가 저장된 경로\n",
+    "-cp `<path>` | class 파일이 저장된 경로\n",
+    "\n",
+    "\n",
+    "javac, java에 선택명령어를 사용하여 실행한다.\n",
+    "디렉토리가 윈도우 ('\\') 또는 리눅스 ('/')에 따라 다르다는 점에 주의한다.\n",
+    "\n",
+    "구분 | 윈도우 | 리눅스\n",
+    "-----|-----|-----\n",
+    "컴파일 | javac -d classes -sourcepath src\\ src\\Hello.java | javac -d classes/ -sourcepath src/ src/Hello.java \n",
+    "실행 | java -cp classes Hello | java -cp classes/ Hello "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# %load src/Hello.java\n",
+    "class Hello {\n",
+    "    static String name=\"world!\";\n",
+    "    Hello(String name) {\n",
+    "        this.name=name;\n",
+    "    }\n",
+    "    static void sayHello() {\n",
+    "        System.out.println(\"hello \" + name);\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        sayHello();\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -345,7 +458,22 @@
     }
    },
    "source": [
-    "## 1.9 연습문제\n"
+    "## 1.9 연습문제\n",
+    "\n",
+    "* Java를 설치하고 java, javac를 실행해본다.\n",
+    "\n",
+    "```java\n",
+    "C:\\> java -version\n",
+    "C:\\> javac -version\n",
+    "```\n",
+    "\n",
+    "* Java가 실행되는 경로를 출력한다.\n",
+    "\n",
+    "```java\n",
+    "C:> where java\n",
+    "```\n",
+    "\n",
+    "* Java가 설치된 디렉토리의 lib 디렉토리에 저장된 파일이 무엇에 쓰이는지 설명하시오.\n"
    ]
   }
  ],
