--- a/j_1_hello_jshell.ipynb
+++ b/j_1_hello_jshell.ipynb
@@ -10,6 +10,8 @@
    "source": [
     "# 1. Hello jshell\n",
     "\n",
+    "Last update 20180310SAT 1738\n",
+    "\n",
     "## 1.1 학습내용\n",
     "\n",
     "### 1.1.2 목표\n",
@@ -26,7 +28,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## 1.2 REPL\n",
     "\n",
@@ -71,37 +77,7 @@
     "```java\n",
     "$ jshell\n",
     "jshell> \n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "### 설정\n",
-    "\n",
-    "몇 가지 설정을 할 수 있다. 'feecback'과 'editor' 설정을 살펴보자.\n",
-    "* 명령어를 실행하고 결과를 보여주는 feedback이 보통은 내용이 많다. 이를 제거하고 싶으면 'off'로 설정한다.\n",
-    "```java\n",
-    "jshell> /set feedback\n",
-    "  /set feedback normal <- 현재 feedback 상태를 알려준다.\n",
-    "  \n",
-    "  Available feedback modes: <- 가능한 feedback 설정이다.\n",
-    "     concise\n",
-    "     normal\n",
-    "     silent\n",
-    "     verbose\n",
-    "```\n",
-    "\n",
-    "* jshell은 편집이 아무래도 불편하다. 'editor' 등록하면 편리하다. 설정하는 editor는 경로에 등록되어 있어야 한다.\n",
-    "\n",
-    "```java\n",
-    "jshell> /set editor\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -401,11 +377,36 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### `<TAB>` 사용하기\n",
+    "\n",
+    "명령어 자동완성, auto completion 기능을 사용할 수 있다.\n",
+    "명령어 일부를 타이핑하고 나서, <TAB> 키를 누르면 그 상태에서의 사용가능한 명령어를 선택할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `<SHIFT><TAB>`\n",
+    "\n",
+    "i 정보, v 변수를 알아볼 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## 문제 1-2: 1부터 100까지 합계 계산하기"
+    "## 문제 1-2: 1부터 100까지 합계 계산하기\n",
+    "\n",
+    "한 줄씩뿐만 아니라, 여러 줄을 입력하고 실행할 수 있다. for문을 예로 실행해 보자."
    ]
   },
   {
@@ -537,7 +538,55 @@
     }
    },
    "source": [
-    "## 문제 1-4: jshell이용해 보기"
+    "## 문제 1-4: jshell을 사용해서 환경 이용해 보기\n",
+    "\n",
+    "\n",
+    "### 명령어\n",
+    "\n",
+    "jshell 명령어는 '/'로 시작한다.\n",
+    "명령어 가운데 일부는 아래와 같다.\n",
+    "\n",
+    "명령어 | 설명\n",
+    "-----|-----\n",
+    "/list | 입력한 코드 보기 all, start\n",
+    "/imports | import된 패키지\n",
+    "/vars | 선언한 변수와 값\n",
+    "/methods | 선언한 함수\n",
+    "/save | 코드를 파일에 저장\n",
+    "/open | 파일 열기\n",
+    "/exit | 종료\n",
+    "/set | 설정\n",
+    "/! | 직전 명령어 재실행"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 설정\n",
+    "\n",
+    "몇 가지 설정을 할 수 있다. 'feecback'과 'editor' 설정을 살펴보자.\n",
+    "* 명령어를 실행하고 결과를 보여주는 feedback이 보통은 내용이 많다. 이를 제거하고 싶으면 'off'로 설정한다.\n",
+    "```java\n",
+    "jshell> /set feedback\n",
+    "  /set feedback normal <- 현재 feedback 상태를 알려준다.\n",
+    "  \n",
+    "  Available feedback modes: <- 가능한 feedback 설정이다.\n",
+    "     concise\n",
+    "     normal\n",
+    "     silent\n",
+    "     verbose\n",
+    "```\n",
+    "\n",
+    "* jshell은 편집이 아무래도 불편하다. 'editor' 등록하면 편리하다. 설정하는 editor는 경로에 등록되어 있어야 한다.\n",
+    "\n",
+    "```java\n",
+    "jshell> /set editor\n",
+    "```"
    ]
   },
   {
@@ -768,6 +817,37 @@
    },
    "source": [
     "/edit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "* jshell에서 입력한 명령어를 스크립트로 저장할 경우 'start'로 시작하고 'end'로 끝낸다.\n",
+    "\n",
+    "```\n",
+    "/set start myscript.jsh\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 클래스 경로 classpath\n",
+    "\n",
+    "`/classpath <path>` 명령어를 사용하여 경로를 적어준다."
    ]
   }
  ],
