--- a/j_1_hello_jshell.ipynb
+++ b/j_1_hello_jshell.ipynb
@@ -55,9 +55,9 @@
    },
    "source": [
     "jshell의 사용사례는:\n",
-    "* 간단한 클래스를 만들고 테스트할 경우에 사용할 수 있다. 단, 'public'은 지원하지 않는다.\n",
-    "* 말 그대로 shell 방식으로 프로토타잎을 빠르게 테스트할 수 있다. 예를 들어, ArrayList, Stream, File 등 API를 간편하게 테스트할 수 있다. 어느 정도 완성이 되면 클래스를 만들 때 복사해서 활용할 수 있다.\n",
-    "* 클래스를 만들고 main() 함수없이 테스트할 경우"
+    "* **간단한 클래스**를 만들고 테스트할 경우에 사용할 수 있다. 단, 'public'은 지원하지 않는다.\n",
+    "* 말 그대로 shell 방식으로 **프로토타잎**을 빠르게 테스트할 수 있다. 예를 들어, ArrayList, Stream, File 등 API를 간편하게 테스트할 수 있다. 어느 정도 완성이 되면 클래스를 만들 때 복사해서 활용할 수 있다.\n",
+    "* 클래스를 만들고 **main() 함수없이 테스트**할 경우"
    ]
   },
   {
@@ -484,7 +484,8 @@
     "## 문제1-3: a=1이라고 해 놓고, a 값이 1과 같은지 비교하기\n",
     "\n",
     "* a=1은 저장하기\n",
-    "* 비교하려면 a==1"
+    "* 비교하려면 a==1\n",
+    "* '='는 할당연산자, assignment의미, '=='는 비교연산자, equality 의미이다."
    ]
   },
   {
@@ -792,12 +793,18 @@
     }
    },
    "source": [
-    "* set editor\n",
-    "    ```\n",
-    "    /set editor vim\n",
-    "    /l\n",
-    "    /edit 1\n",
-    "    ```"
+    "자바에서 제공하는 에디터가 편리하지 않으면 자신이 선호하는 것을 사용해도 된다.\n",
+    "이 경우, 선호하는 에디터를 등록한다.\n",
+    "**절대경로**를 넣고 /set editor \"c:/Users/jsl/AppData/Local/atom/atom.exe\" -wait\n",
+    "\n",
+    "jshell에서는 **임시파일**을 만들어 편집을 한다. 다른 에디터를 사용하는 경우 변경이 반영될 수 있도록 '**-wait**'를 적어준다.\n",
+    "편집이 끝나면 저장을 한다.\n",
+    "\n",
+    "```\n",
+    "/set editor vim\n",
+    "/l\n",
+    "/edit 1\n",
+    "```"
    ]
   },
   {
@@ -819,7 +826,7 @@
     }
    ],
    "source": [
-    "/set editor vim"
+    "/set editor vim -w"
    ]
   },
   {
@@ -836,15 +843,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "* jshell에서 입력한 명령어를 스크립트로 저장할 경우 'start'로 시작하고 'end'로 끝낸다.\n",
     "\n",
@@ -863,7 +868,7 @@
    "source": [
     "### 클래스 경로 classpath\n",
     "\n",
-    "`/classpath <path>` 명령어를 사용하여 경로를 적어준다."
+    "`/env -class-path <path>` 명령어를 사용하여 경로를 적어준다."
    ]
   }
  ],
