--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 2. Class and Objects\n",
     "\n",
-    "Last updated 20180318SUN0729 20180317SAT2200\n",
+    "Last updated 20180322THR2000 20180318SUN0729 20180317SAT2200\n",
     "\n",
     "## 2.1 학습내용\n",
     "\n",
@@ -488,7 +488,7 @@
     "    * 갈기 grind\n",
     "    * 내리기 brew\n",
     "\n",
-    "이렇게 커피를 만든 것은 **'요구사항'** 때문이다. 즉 요구가 달라지면 다르게 된다. 커피 산지에서는 '볶은 정도'가 있을 수 없다. 따라서 '볶기', '갈기', '내리기' 모두 필요하지 않은 기능 또는 함수이다. 나중에 배우겠지만 이런 커피는 우유 등을 넣어 Latte 또는 Macchiato를 만들 수 있다. 이 경우를 **상속**이라고 한다."
+    "이렇게 커피를 만든 것은 **'요구사항'** 때문이다. 즉 요구가 달라지면 다르게 된다. **커피 산지에서는 '볶은 정도'가 있을 수 없다. 따라서 '볶기', '갈기', '내리기' 모두 필요하지 않은 기능 또는 함수이다**. 나중에 배우겠지만 이런 커피는 우유 등을 넣어 Latte 또는 Macchiato를 만들 수 있다. 이 경우를 **상속**이라고 한다."
    ]
   },
   {
@@ -518,7 +518,7 @@
    "source": [
     "%%plantuml\n",
     "@startuml\n",
-    "class coffee {\n",
+    "class Coffee {\n",
     "    origin\n",
     "    degreeOfRoast\n",
     "    grade\n",
@@ -815,8 +815,8 @@
    },
    "source": [
     "* 객체를 만들 때도 같은 방식이다.\n",
-    "```\n",
-    "DataType name = new DataType\n",
+    "```java\n",
+    "DataType name = new 클래스 생성자\n",
     "```\n",
     "\n",
     "* 변수의 경우 오른편에는 값, 왼편에는 이름을 가진다.\n",
@@ -926,6 +926,7 @@
     "\n",
     "이름은 클래스 다이어그램 속성 칸에 추가된다.\n",
     "형식은 콜론을 중심으로 좌측에 속성명을, 우측에 데이터타잎을 적는다.\n",
+    "함수의 UML표현은 **`함수명:반환하는 데이터타잎`**으로 적는다.\n",
     "데이터타잎은 다음 장에 자세히 배우게 된다.\n",
     "\n",
     "```java\n",
@@ -939,7 +940,8 @@
     "String | 데이터타잎\n",
     "\"world\" | 값을 생성시점 초기화\n",
     "\n",
-    "함수의 UML표현은 **`함수명:반환하는 데이터타잎`**으로 적는다."
+    "\n",
+    "또 **기본생성자 Hello()**를 추가했다. 기본생성자는 객체를 생성하는 기능만 있고, 구현하지 않아도 된다."
    ]
   },
   {
@@ -971,6 +973,7 @@
     "@startuml\n",
     "class Hello {\n",
     "  toWhom:String=\"world\"\n",
+    "  Hello()\n",
     "  sayHello():void\n",
     "}\n",
     "@enduml"
@@ -982,7 +985,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -1098,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1111,7 +1114,7 @@
      "output_type": "stream",
      "text": [
       " class Hello {\r\n",
-      "     String toWhom=\"world\";\r\n",
+      "     private String toWhom=\"world\";\r\n",
       "     Hello() {}\r\n",
       "     void setWhom(String whom) {\r\n",
       "         toWhom=whom;\r\n",
@@ -1120,16 +1123,14 @@
       "         System.out.println(\"hello \"+toWhom);\r\n",
       "     }\r\n",
       " }\r\n",
-      "|  Replaced class Hello\r\n",
-      "|    Update replaced variable h, reset to null\r\n",
-      "|    Update overwrote class Hello\r\n",
+      "|  Added class Hello\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
     "class Hello {\n",
-    "    String toWhom=\"world\";\n",
+    "    private String toWhom=\"world\";\n",
     "    Hello() {}\n",
     "    void setWhom(String whom) {\n",
     "        toWhom=whom;\n",
@@ -1198,12 +1199,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "private으로 'toWhom'을 데이터를 보호하지 않았다면 바로 변경이 가능했을 것이다.\n",
+    "이렇게 멤버변수를 public으로 하고 누구나 직접 사용하게 한다면 `캡슐화`를 하지 못하게 된다.\n",
+    "\n",
+    "```java\n",
+    "h2.toWhom=\"jsl\";\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -2804,21 +2821,14 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Java 9",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "file_extension": ".class",
+   "mimetype": "application/java-vm",
+   "name": "java"
   }
  },
  "nbformat": 4,
