--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 2. Class and Objects\n",
     "\n",
-    "Last updated 20180322THR2000 20180318SUN0729 20180317SAT2200\n",
+    "Last updated 20180322THR2120 20180318SUN0729 20180317SAT2200\n",
     "\n",
     "## 2.1 학습내용\n",
     "\n",
@@ -372,7 +372,7 @@
    "source": [
     "클래스는 개념이다. 실제로 내 앞에 존재하는 것은 객체이다.\n",
     "\n",
-    "![alt text](figures/1_1_class_object.png \"Title\")"
+    "![alt text](figures/2_1_class_object.png \"Title\")"
    ]
   },
   {
@@ -2239,8 +2239,17 @@
     "### private vs public\n",
     "\n",
     "클래스의 데이터는 아무나 사용할 수 없도록 권한을 제한해야 한다.\n",
-    "특히 몸무게는 사적 정보로서 감추고 자신만이 알려줄 수 있다고 하자.\n",
-    "\n",
+    "특히 몸무게는 사적 정보로서 감추고 자신만이 알려줄 수 있다고 하자."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### setter, getter\n",
     "\n",
     "속성에 대해 getter, setter를 가진다.\n",
@@ -2248,14 +2257,19 @@
     "구분 | 설명 | 예제\n",
     "-----|-----|-----\n",
     "getter | get+속성, 반환이 있고, 매개변수는 없다. | getWeight():float\n",
-    "setter | set+속성, 반환이 없고, 매개변수가 있다. | setWeight(float):void\n"
+    "setter | set+속성, 반환이 없고, 매개변수가 있다. | setWeight(float):void\n",
+    "\n",
+    "![alt text](figures/2_2_setterGetter.png \"setter getter\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -2821,14 +2835,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Java 9",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
   },
   "language_info": {
-   "file_extension": ".class",
-   "mimetype": "application/java-vm",
-   "name": "java"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
