--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 2. Class and Objects\n",
     "\n",
-    "Last updated 20180322THR2120 20180318SUN0729 20180317SAT2200\n",
+    "Last updated 20180325SUN0804 20180322THR2120 20180318SUN0729 20180317SAT2200\n",
     "\n",
     "## 2.1 학습내용\n",
     "\n",
@@ -24,11 +24,12 @@
     "\n",
     "### 2.1.2 문제\n",
     "\n",
-    "* 문제 2-1: Hello 인사하는 프로그램\n",
-    "* 문제 2-2: 지하철 클래스를 만들고, 몇 호선인지 정해서 운행하기\n",
-    "* 문제 2-3: 커피 원산지를 넣어서, 객체를 생성할 때 원산지를 가지고 있도록 구현한다.\n",
+    "* 문제 2-1: Hello 인사하는 프로그램을 객체지향, 함수방식 비교하기\n",
+    "* 문제 2-2: 지하철 몇 호선인지 정해서 운행하는 클래스, 절차를 정해서 만들기\n",
+    "* 문제 2-3: 커피 원산지를 넣어서, 객체를 생성할 때 원산지를 가지고 있도록 구현한다\n",
     "* 문제 2-4: 몸무게를 자신 이외에는 알 수 없도록 구현한다.\n",
-    "* 미니 프로젝트 문제: dice game\n",
+    "* 문제 2-5: 사각형의 면적을 계산하기, 데이터를 보호하는 방식으로 구현\n",
+    "* 연습문제 주사위 만들기\n",
     "\n",
     "+ this, garbage collection, finalize\n",
     "+ 미로 http://crpit.com/confpapers/CRPITV30Nevison.pdf"
@@ -577,7 +578,7 @@
     }
    },
    "source": [
-    "## 문제 2-1: Hello 인사하는 프로그램\n",
+    "## 문제 2-1: Hello 인사하는 프로그램을 객체지향, 함수방식 비교하기\n",
     "\n",
     "함수방식으로 만들어보고, 어떻게 객체지향으로 바뀔 수 있는지 또는 어떻게 다른 것인지 비교해 보자.\n",
     "함수 sayHello()는 매우 간단히 구현할 수 있다."
@@ -1299,7 +1300,7 @@
     }
    },
    "source": [
-    "## 문제 2-2: 지하철 클래스를 만들고, 몇 호선인지 정해서 운행하기\n",
+    "## 문제 2-2: 지하철 몇 호선인지 정해서 운행하는 클래스, 절차를 정해서 만들기\n",
     "\n",
     "절차를 정해서 만들어 보자.\n",
     "단순한 클래스이므로 코드가 어렵지 않다.\n",
@@ -1505,9 +1506,10 @@
    "source": [
     "## 2.4 constructor\n",
     "\n",
-    "* 생성자는 처음 틀을 만들 때, 초기화를 하는 것이다.\n",
-    "    * **default constructor**를 사용하거나\n",
-    "    * 새로 constructor를 만들 수 있다. **constructor overloading**이라고 한다."
+    "생성자는 함수이지만, 보통 함수와 달리 그 목적은 객체를 생성하는 것이다.\n",
+    "생성자는 객체를 만들 때 처음 실행되면서 필요한 작업, 초기 데이터를 설정하던지 등을 한다.\n",
+    "* **기본 생성자, default constructor**를 사용하거나\n",
+    "* 새로 constructor를 만들 수 있다. **constructor overloading**이라고 한다."
    ]
   },
   {
@@ -1518,11 +1520,15 @@
     }
    },
    "source": [
+    "### 기본 생성자\n",
+    "\n",
     "* Hello 클래스는 다시 쓰면 다음과 같다. 즉 Hello()가 생략되어 있었다. 이를 default constructor라고 한다.\n",
     "* default constructor의 특징\n",
-    "    * 클래스 명과 동일하다.\n",
-    "    * 반환이 없다. void도 쓰지 않는다.\n",
-    "    * public이라고 선언하지 않으면, 패키지에서만 사용할 수 있는 권한이다 (package private)"
+    "    * **매개변수가 없는 생성자는 기본**으로 제공된다. 사용자가 만들지 않아도 된다.\n",
+    "    * 시그니처\n",
+    "        * **클래스 명과 동일**하다.\n",
+    "        * **반환이 없다**. void도 쓰지 않는다.\n",
+    "        * public, private 등 가시성을 가질 수 있다. abstract, final, static 등은 사용할 수 없다.\n"
    ]
   },
   {
@@ -1599,10 +1605,16 @@
     }
    },
    "source": [
-    "* **constructor overloading**\n",
-    "    * 생성자 이름은 동일하지만, 넘겨주는 인자가 다르다.\n",
-    "    * 앞서 구현한 방식과 달리, 생성자를 사용하여 sayHello()\n",
-    "    * 아래는 생성자가 몇 개인 것일까? 답:2개"
+    "### **constructor overloading**\n",
+    "\n",
+    "* 생성자 이름은 동일하지만, 매개변수가 다르다.\n",
+    "* 앞서 구현한 방식과 달리, 생성자를 사용하여 sayHello()\n",
+    "* 아래는 생성자가 몇 개인 것일까? 답:2개\n",
+    "\n",
+    "> 알아두기\n",
+    "> **Overloading**\n",
+    ">\n",
+    "> 같은 클래스에서 함수 이름은 같게, 그러나 매개변수만을 다르게 해서 구현하는 것을 오버로딩이라고 한다."
    ]
   },
   {
@@ -1896,7 +1908,7 @@
     }
    },
    "source": [
-    "* 가시성의 종류에는 4가지가 있다. 여기서는 public, privat을 사용해 본다.\n",
+    "* 가시성의 종류에는 4가지가 있다. 여기서는 public, private을 사용해 본다.\n",
     "    * public field\n",
     "    * private field\n",
     "\n",
@@ -2062,7 +2074,7 @@
     "* public을 모두 사용한다. 누구나 사용할 수 있다는 의미이다.\n",
     "    * class가 public이란 클래스를 누구나 사용할 수 있다. 나중에 보겠지만, 클래스 파일이름이 클래스 이름과 같아야 한다. jshell에서는 클래스를 public으로 하는 것이 의미가 없다.\n",
     "    * 생성자가 public이란 누구나 객체를 생성할 수 있다.\n",
-    "    * 함수가 public이란 누가나 함수를 호출할 수 있다."
+    "    * 함수가 public이란 누구나 함수를 호출할 수 있다."
    ]
   },
   {
@@ -2508,7 +2520,7 @@
     }
    },
    "source": [
-    "## 문제 2-5: 사각형의 면적을 계산한다.\n",
+    "## 문제 2-5: 사각형의 면적을 계산하기, 데이터를 보호하는 방식으로 구현\n",
     "\n",
     "앞서 절차언어는 데이터와 코드가 분리되어 있고, 객체지향언어는 그 두 요소가 묶여 있다고 했다. 그 차이를 비교해 보자.\n",
     "\n",
