--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 3. 데이터 타잎과 연산자\n",
     "\n",
-    "Last updated 20180325SUN1843 20180309FRI\n",
+    "Last updated 20180325SUN2040 20180309FRI\n",
     "\n",
     "## 3.1 학습내용\n",
     "\n",
@@ -465,13 +465,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "byte는 원시타잎이다. 크기, 최대값, 최소값 등을 알려면 **객체 Byte**를 사용해야 한다. **원시타잎 byte**는 말 그대로 데이터만 가지고 있다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -647,7 +658,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -797,8 +811,17 @@
     "\n",
     "간단한 연산문제라 하더라도, 데이터타잎을 올바르게 설계하지 않으면 오류가 발생한다.\n",
     "이는 데이터타잎을 엄격하게 지키는 언어의 특성, 메모리를 효율적으로 쓰려고 하는 이유이다.\n",
-    "버전 3에서 올바르게 문제를 풀었다.\n",
-    "\n",
+    "버전 3에서 올바르게 문제를 풀었다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### 버전 1\n",
     "\n",
     "아래 화씨 'fahrenheit' 23도를 섭씨 'celsius'로 변환하면 **0.00으로 출력**된다. 무엇이 잘못일까 찾아보자.\n",
@@ -1800,7 +1823,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "source": [
     "* d는 c를 가지고 있으므로, 같은 객체에 대한 복사본\n",
@@ -1832,7 +1858,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "source": [
     "* c를 변경할 수도 있다.\n",
@@ -1863,7 +1892,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "source": [
     "* 관계를 절단할 수도 있다. 아무런 객체와도 관계가 없다 -> 알지 못한다는 의미."
