--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 2. Class and Objects\n",
     "\n",
-    "Last updated 20180325SUN0804 20180322THR2120 20180318SUN0729 20180317SAT2200\n",
+    "Last updated 20180327TUE0540 20180325SUN0830\n",
     "\n",
     "## 2.1 학습내용\n",
     "\n",
@@ -20,8 +20,17 @@
     "* 객체를 사용할 수 있다.\n",
     "* 클래스를 구성하는 필드, 멤버함수를 사용할 수 있다.\n",
     "* 클래스의 생성자, 가시성을 사용할 수 있다.\n",
-    "* 클래스를 참조하여 사용할 수 있다.\n",
-    "\n",
+    "* 클래스를 참조하여 사용할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### 2.1.2 문제\n",
     "\n",
     "* 문제 2-1: Hello 인사하는 프로그램을 객체지향, 함수방식 비교하기\n",
@@ -2615,7 +2624,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### 사각형을 화면에 그리려면 클래스가 수정된다.\n",
     "\n",
@@ -2629,7 +2642,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -2677,6 +2693,20 @@
     "//    }\n",
     "}\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### main() 함수 넣기\n",
+    "\n",
+    "main() 함수를 넣고, 컴파일 해보자.\n",
+    "패키지가 있어서 명령어에 반영한다."
    ]
   },
   {
