--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 2. Class and Objects\n",
     "\n",
-    "Last updated 20180327TUE0540 20180325SUN0830\n",
+    "Last updated 20180328WEB1730 20180325SUN0830\n",
     "\n",
     "## 2.1 학습내용\n",
     "\n",
@@ -1750,6 +1750,7 @@
     "\n",
     "또는 생성자 - 그러나 한 번 정해지면 거의 변경이 없는 성격인지 생각해 본다.\n",
     "속성 가운데 '브라질' 원산지 origin은 **변경되지 않는 객체고유의 특징**을 가지고 있으므로, 생성자에 넣는다.\n",
+    "반면에 degreeOfRoast는 roast()가 실행되어야 결정될 수 있다. 이와 같이 생성 후에 결정되는 데이터를 생성자에서 초기화하는 것은 올바르지 않다.\n",
     "\n",
     "### 속성에 대한 생각\n",
     "\n",
@@ -2284,6 +2285,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "생성자에 몸무게를 초기화하면 어떨지 생각해 보자.\n",
+    "몸무게는 태어날 때 결정되지 않고, 바뀌기 마련이다.\n",
+    "이런 데이터는 생성자에 넣는 것이 올바르지 않다.\n",
+    "아래 클래스에는 'weight' 외에는 넣지 않았지만, 생년월일은 Person에 필요한 속성이고, 이런 데이터는 생성자에서 초기화하면 적절하다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2555,6 +2570,10 @@
     "\n",
     "Python으로 함수 computeArea(width, height)를 구현하였다.\n",
     "너비와 높이 데이터는 외부에서 제공하고 있다.\n",
+    "잠깐 함수명에 대하여 생각해보자.\n",
+    "삼각형을 계산한다면 함수이름을 어떻게 정해야 할까? 동일한 이름은 사용할 수 없다.\n",
+    "computeTriangleArea()가 적절하다. 그렇다면 사각형 면적계산은 computeRectangleArea()가 되어야 일관성이 유지된다.\n",
+    "함수프로그램에서는 overloading이 되지 않는다.\n",
     "\n",
     "```python\n",
     ">>> def computeArea(width, height):\n",
@@ -2577,6 +2596,7 @@
     "### 버전 2: 데이터가 없는 객체지향\n",
     "\n",
     "자바에서 구현한 버전이다. 버전 1과 비교해서 매개변수가 외부에서 제공되고 있다는 점에서 부자연스럽다.\n",
+    "너비, 높이는 사각형 자신의 데이터라는 점을 기억하자. 자신의 데이터를 사용해서 면적계산을 하는 것이 객체지향스럽다.\n",
     "\n",
     "```java\n",
     "-> /set feedback off\n",
@@ -2635,7 +2655,8 @@
     "실제 화면에 그림을 그리는 사각형을 만들어 보자.\n",
     "실제 화면에 그리려면 좌표가 필요하다.\n",
     "너비, 높이가 화소 정보로 변경되어야 하는 것이다.\n",
-    "여기서의 면적은 화소너비, 화소높이로 계산하면 맞지 않게 된다."
+    "여기서의 면적은 화소너비, 화소높이로 계산하면 올바르지 않게 된다.\n",
+    "클래스는 **요구사항에 따라 다르게** 만들어 질 수 있다."
    ]
   },
   {
