--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 3. 데이터 타잎과 연산자\n",
     "\n",
-    "Last updated 20180401SUN2200 20180309FRI\n",
+    "Last updated 20180404WED1100 20180309FRI\n",
     "\n",
     "## 3.1 학습내용\n",
     "\n",
@@ -85,7 +85,7 @@
     "'상자'에는 값을 넣어 **저장**할 수 있다.\n",
     "변수명으로 **상자 안에 있는 값**을 알 수 있다.\n",
     "* 그림에서와 같이 상자에는 숫자 175를 가지고 있다. 변수명은 **height**, 값은 **175**가 측정단위 cm 없이 저장되어 있다. 또는 문자를 가질 수도 있다. 그러나 딱 하나의 값을 저장한다. 주의할 점은 상자에는 그 모양과 다른 것을 넣을 수 없다. 예를 들어, 숫자 상자에는 문자를 넣을 수 없다.\n",
-    "* 학생이라는 객체는 키와 몸무게를 가지는 경우, 참조가 저장된다.\n",
+    "* 학생이라는 객체가 height와 weight를 가지는 경우, 참조가 저장된다.\n",
     "\n",
     "![alt text](figures/3_2_variableBox.png \"Variable box\")"
    ]
@@ -1074,10 +1074,9 @@
     }
    },
    "source": [
-    "5를 5.0으로 하면, **double**이 된다. 소수점 이하 자리수를 세어보자. **16자리**라는 점을 기억하자.\n",
-    "이를 출력해 보자. 소수점 \"%.1f\"로 출력하면 오류가 발생한다.\n",
-    "double을 출력하려면 미리 **출력형식, String.format**을 만들어서 출력한다.\n",
-    "소수 1자리 출력은 0.5555556이 0.6으로 반올림 되고 있다."
+    "5를 5.0으로 하면, **double**이 된다.\n",
+    "소수를 float로 하면 정밀도를 잃어버릴 위험이 있기 때문에 **default를 double**로 한다.\n",
+    "소수점 이하 자리수를 세어보자. **16자리**라는 점을 기억하자."
    ]
   },
   {
@@ -1100,6 +1099,25 @@
    ],
    "source": [
     "5.0/9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "double을 출력해 보자.\n",
+    "\n",
+    "구분 | 설명\n",
+    "-----|-----\n",
+    "System.out.print() | 출력으로 줄 바꿈이 없다.\n",
+    "System.out.println() | print + line 추가\n",
+    "System.out.printf() | 서식에 맞추어 출력.\n",
+    "\n",
+    "System.out.println()에 서식을 넣어 사용하면 당연히 오류이다.\n"
    ]
   },
   {
@@ -1165,8 +1183,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "double을 출력하려면 미리 **출력형식, Double.toString()**을 만들어서 출력한다.\n",
+    "그냥 \"%f\"로 출력하면 **float출력**이고, 소수점 6자리로 줄여서 출력하게 된다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " System.out.println(\"double : \" + Double.toString(5.0/9));\r\n",
+      "double : 0.5555555555555556\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "System.out.println(\"double : \" + Double.toString(5.0/9));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1175,14 +1227,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " System.out.println(\"double : \" + String.format(\"%.1f\", 5.0/9));\r\n",
-      "double : 0.6\r\n",
+      " System.out.printf(\"%f\",5.0/9);\r\n",
+      "0.555556|  Expression value is: java.io.PrintStream@73ad2d6\r\n",
+      "|    assigned to temporary variable $6 of type PrintStream\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "System.out.println(\"double : \" + String.format(\"%.1f\", 5.0/9));"
+    "System.out.printf(\"%f\",5.0/9);"
    ]
   },
   {
@@ -1510,7 +1563,7 @@
     }
    },
    "source": [
-    "## 문제 3-3: 사용자에게 섭씨온도를 입력받아 화씨로 변환하기\n",
+    "## 문제 3-3: 사용자에게 화씨온도를 입력받아 섭씨로 변환하기\n",
     "\n",
     "앞서 3-1, 3-2를 합쳐서 사용자 입력을 받아 온도변환을 해보자.\n",
     "\n",
@@ -1533,15 +1586,15 @@
     "\n",
     "public class j_3_3_f2c {\n",
     "    static void f2c(float f) {\n",
-    "        float fahrenheit = 23;\n",
+    "        float fahrenheit = f;\n",
     "        float celsius = ((float)5 / 9) * (fahrenheit - 32);\n",
     "        System.out.printf(\"Fahrenheit %.1f is %.1f in Celsius\", fahrenheit, celsius);\n",
     "    }\n",
     "    public static void main(String[] args) {\n",
     "        System.out.println(\"Enter Fahrenheit: \");\n",
     "        Scanner sc = new Scanner(System.in);\n",
-    "        float c=sc.nextFloat();\n",
-    "        f2c(c);\n",
+    "        float f=sc.nextFloat();\n",
+    "        f2c(f);\n",
     "    }\n",
     "}\n",
     "\n"
@@ -2861,21 +2914,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "display_name": "Java 9",
+   "language": "java",
+   "name": "java"
   }
  },
  "nbformat": 4,
