--- a/j_4_methods.ipynb
+++ b/j_4_methods.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 4. Methods\n",
     "\n",
-    "Last updated 20180408SUN1500 20180318SUN0708\n",
+    "Last updated 20180409MON1222 20180318SUN0708\n",
     "\n",
     "## 4.1 학습내용\n",
     "\n",
@@ -1466,7 +1466,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -1478,7 +1478,10 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -2223,45 +2226,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "실제 삼각형을 그려 보자. 화면 좌표 3개를 잡아서 그린다.\n",
+    "좌표 3개는 배열에 넣어 반복문으로 서로 연결한다.\n",
+    "좌표로 이동하는 **moveTo()**를 사용할 경우:\n",
+    "* **`java.awt.geom.Point2D.Double`**는 **(x,y)**로 묶어서 매개변수로 한다.\n",
+    "* 반면에 **`java.awt.Point`**는 **x,y**를 따로 매개변수로 한다.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing src/com/sd/turtle/Triangle.java\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%writefile src/com/sd/turtle/Triangle.java\n",
+    "# %load src/com/sd/turtle/Triangle.java\n",
     "/*\n",
     " * @author jsl\n",
     " * @since 20180408\n",
     " *\n",
     " * javac -sourcepath src/ -d classes/ -cp lib/aplu5.jar\n",
-    " *   src/com/sd/turtle/Square.java \n",
-    " * java -cp ./classes/:./lib/aplu5.jar com.sd.turtle.Square\n",
+    " *   src/com/sd/turtle/Triangle.java \n",
+    " * java -cp ./classes/:./lib/aplu5.jar com.sd.turtle.Triangle\n",
     " */\n",
     "\n",
     "package com.sd.turtle;\n",
     "import ch.aplu.turtle.*;\n",
     "import java.awt.Color;\n",
+    "//import java.awt.geom.Point2D.Double;\n",
     "import java.awt.Point;\n",
     "\n",
     "public class Triangle {\n",
-    "    Point[] pts=new Point[3];\n",
+    "    static Point[] pts=new Point[3];\n",
     "    //private Point p1;\n",
     "    //private Point p2;\n",
     "    //private Point p2;\n",
-    "    Turtle pen;\n",
+    "    static Turtle pen;\n",
     "    public Triangle(Point x, Point y, Point z) {\n",
     "        pts[0] = x;\n",
     "        pts[1] = y;\n",
@@ -2270,20 +2281,23 @@
     "        pen.setColor(Color.red);\n",
     "        pen.setPenColor(Color.green);\n",
     "    }\n",
-    "    public void draw() {\n",
+    "    public static void draw() {\n",
     "        pen.penUp();\n",
-    "        pen.moveTo(pts[0]); //x,y??\n",
+    "        pen.moveTo(pts[0].x, pts[0].y);\n",
     "        pen.penDown();\n",
-    "        for (int i = 0; i < 3; i++) {\n",
-    "            pen.moveTo(pts[i]);\n",
-    "            //pen.right(90);\n",
-    "        }\n",
+    "        for (int i = 0; i < 3; i++)\n",
+    "            pen.moveTo(pts[i].x, pts[i].y);\n",
+    "        pen.moveTo(pts[0].x, pts[0].y);\n",
     "    }\n",
-    "//    public static void main(String[] args) {\n",
-    "//        Square s = new Square(0.0, 100.0, 100.0);\n",
-    "//        s.draw();\n",
-    "//    }\n",
-    "}\n"
+    "    public static void main(String[] args) {\n",
+    "        Point x=new Point(0,0);\n",
+    "        Point y=new Point(100,0);\n",
+    "        Point z=new Point(50,50);\n",
+    "        Triangle t = new Triangle(x, y, z);\n",
+    "        t.draw();\n",
+    "    }\n",
+    "}\n",
+    "\n"
    ]
   },
   {
