--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -1615,10 +1615,9 @@
     "모든 원시타잎에 대응되는 클래스가 제공되고 있다. 대응되기 때문에 **병렬타잎, parallel type**이라고 한다.\n",
     "원시타잎을 감싸서 만든 클래스라는 의미로 **wrapper class**라고 대응된다.\n",
     "* 단 객체로 wrapping하였기 때문에 메모리를 더 차지한다. 예를 들어 int는 4바이트, Integer는 16바이트.\n",
-    "* 위 표에서 보듯이 'char'는 'Character'가 제공되고 있지만, 'String' 클래스는 원시타잎이 없다. '문자열'은 문자의 배열이라 'char[]'를 사용하는 것이 오히려 상식적이다. 그러나 크기를 알 수 없기 때문에 선언을 할 수 없다는 점을 명심하자. 따라서 'String'을 사용한다.\n",
-    "이름을 보자. 이름은 문자이다. 문자 하나로는 이름이 될 수 없으므로, 문자열이 필요하다. 한글은 보통 3글자이지만, 그 이상도 될 수 있다. String은 이름에 적합한 데이터 타잎이다.\n",
-    "\n",
-    "* 예를 들어, int는 32 비트를 사용하고, 이 전체를 읽어서 값을 사용한다.\n",
+    "* 위 표에서 보듯이 'char'는 'Character'가 제공되고 있지만, 'String' 클래스는 원시타잎이 없다. **'문자열'은 문자의 배열이라 'char[]'**를 사용하는 것이 오히려 상식적이다. 그러나 **크기를 알 수 없기 때문에 선언을 할 수 없다**는 점을 명심하자. 따라서 'String'을 사용한다.\n",
+    "이름을 보자. 이름은 문자이다. 문자 하나로는 이름이 될 수 없으므로, 문자열이 필요하다. 한글은 보통 3글자이지만, 그 이상도 될 수 있다. String은 이런 이름과 같이 **크기가 클 수도 적을 수도 있지만, 정해지면 변경하지 않는 경우**에 사용할 수 있는 데이터 타잎이다.\n",
+    "* 예를 들어, int는 4 바이트를 사용하고, 이 전체를 읽어서 값을 사용한다.\n",
     "* 그러나 객체는 메모리의 크기를 알 수 없다. 따라서 참조를 사용해야 한다.\n",
     "* 참조는 객체가 저장되어 있는 메모리의 일정 부분을 가리키고 있다.\n",
     "* 참조를 사용하는 경우는, 객체, wrapper class, 객체의 배열 (an array of reference)이다."
@@ -1895,7 +1894,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "#### String은 생성되면 수정할 수 없다.\n",
     "\n",
@@ -1961,15 +1964,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "'hello world'를 저장하려면 이미 생성되어 있는 'hello'가 아니라, 새롭게 문자열 'helloWorld'를 생성해서 저장해야 한다."
    ]
@@ -2288,7 +2289,7 @@
    },
    "source": [
     "c를 변경할 수도 있다. c에 b를 넣고 hashCode를 확인하면 당연히 b로 가리키게 된다.\n",
-    "그러나 c의 복사본 d는 당연히 수정되지 않는다."
+    "그러나 **c가 변경되더라도, 이전에 만들었던 c의 복사본인 d는 당연히 수정되지 않는다**."
    ]
   },
   {
@@ -2916,6 +2917,11 @@
   "kernelspec": {
    "display_name": "Java 9",
    "language": "java",
+   "name": "java"
+  },
+  "language_info": {
+   "file_extension": ".class",
+   "mimetype": "application/java-vm",
    "name": "java"
   }
  },
