--- a/j_4_methods.ipynb
+++ b/j_4_methods.ipynb
@@ -433,6 +433,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "* 왜 변수를 함수의 argument로 넣을까?\n",
+    "* 함수에 변수를 넘기지 않으면 함수에 변수를 '하드 코딩' hard coding 한다. 여러 경우에 사용할 수 없게 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "void myprint() {\n",
+    "    System.out.println(1);\n",
+    "}\n",
+    "myprint();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "void myprint(int i) {\n",
+    "    System.out.println(i);\n",
+    "}\n",
+    "myprint(1);\n",
+    "myprint(2);"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -945,14 +986,16 @@
     "-----|-----\n",
     "+1 | 큰 경우\n",
     "0 | 같은 경우\n",
-    "-1 | 적은 경우"
+    "-1 | 적은 경우\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1003,6 +1046,89 @@
     "} else {\n",
     "    System.out.printf(\"%f is eqaul to %f\",x,y);\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "참고로 문자열에 대해서도 compareTo()를 사용할 수 있다.\n",
+    "* 문자열이 같으면 0\n",
+    "* 순서가 빠르면 양수\n",
+    "* 느리면 음수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \"a\".compareTo(\"a\");\r\n",
+      "|  Expression value is: 0\r\n",
+      "|    assigned to temporary variable $1 of type int\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"a\".compareTo(\"a\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \"abc\".compareTo(\"abb\");\r\n",
+      "|  Expression value is: 1\r\n",
+      "|    assigned to temporary variable $2 of type int\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"abc\".compareTo(\"abb\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \"abc\".compareTo(\"abd\");\r\n",
+      "|  Expression value is: -1\r\n",
+      "|    assigned to temporary variable $3 of type int\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"abc\".compareTo(\"abd\");"
    ]
   },
   {
