--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -1109,15 +1109,29 @@
     }
    },
    "source": [
-    "double을 출력해 보자.\n",
+    "double, float, int를 출력해 보자.\n",
     "\n",
     "구분 | 설명\n",
     "-----|-----\n",
     "System.out.print() | 출력으로 줄 바꿈이 없다.\n",
-    "System.out.println() | print + line 추가\n",
+    "System.out.println() | print + line 추가. 서식을 넣어 사용하면 당연히 오류이다.\n",
     "System.out.printf() | 서식에 맞추어 출력.\n",
     "\n",
-    "System.out.println()에 서식을 넣어 사용하면 당연히 오류이다.\n"
+    "수를 출력하면서 데이터 타잎에 주의한다.\n",
+    "* \"%d\", 12.3는 **정수**로 형변환을 해서 출력을 하므로 12. 단 소수에서 정수로 출력하는 경우 **다운캐스팅**이라서 오류가 난다. 분명하게 캐스팅을 해야 한다. 그 결과 소수점 이하를 잃게 된다.\n",
+    "* \"%s\", 12.3는 **문자열**로 형변환을 해서 출력하므로 숫자가 아닌 문자열 12.3.\n",
+    "* \"%.2f\", 12.3는 **소수점 2자리**로 출력을 하므로 12.30."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "System.out.printf(\"첫 번째 %d 두 번째 %s 세 번째 %.2f\", (int)12.3,12.3,12.3);"
    ]
   },
   {
@@ -2835,8 +2849,8 @@
     "\n",
     "앞서 변수의 연산에 이미 사용한 '+', '-', '*', '/' 기호는 수학과 동일한 의미를 가진다.\n",
     "단 이들은 수 또는 문자를 피연산자로 만나면 다른 의미를 가진다.\n",
-    "수 1,2를 만나면 '+'는 더하기를 한다.\n",
-    "그러나 문자열 \"a\", \"b\"를 만나면 합성을 한다.\n",
+    "수 1,2를 만나면 '+'는 **더하기**를 한다.\n",
+    "그러나 문자열 \"a\", \"b\"를 만나면 **합성**을 한다.\n",
     "어떤 피연사자인지에 따라 동일한 '+' 연산자가 다른 기능을 수행하는 것을 오버로딩 'overloading'이라고 한다."
    ]
   },
@@ -2909,6 +2923,38 @@
     "String y=\"b\";\n",
     "System.out.println(\"x+y=\"+(x+y));"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " System.out.printf(\"%s\",\"Hello \"+\"Seoul\\n\");\r\n",
+      "Hello Seoul\r\n",
+      "|  Expression value is: java.io.PrintStream@5f341870\r\n",
+      "|    assigned to temporary variable $2 of type PrintStream\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "System.out.printf(\"%s\",\"Hello \"+\"Seoul\\n\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
